@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-10T16:14:14Z",
+  "timestamp" : "2023-07-11T16:13:41Z",
   "count_outdated" : 42,
   "uniques_outdated" : 32,
-  "count" : 46,
-  "uniques" : 35,
+  "count" : 51,
+  "uniques" : 38,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
