@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 9,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
